# proteus

./: .gitignore  README.md  [Public]_PT2_Backend_Integration.ipynb  aten_op_todolist.txt  graph.txt  mlx_builder.py  proteus.py  pyproject.toml  requirements.txt  setup.py  test.py  torch_graph.txt
c_extensions/: CMakeLists.txt  __init__.py  bindings.cpp  c_ext.md  cpp_ext.pyi
c_extensions/axpby/: axpby.cpp  axpby.h  axpby.metal
c_extensions/c_extensions/: __init__.py
c_extensions/tensor_coercion/: coercion.cpp  coercion.h
proteus/: __init__.py  arg_marshalers.py  mlx_builder.py  proteus.py  proteus_fun.ipynb  proteus_fun.py  utils.py
proteus.egg-info/: PKG-INFO  SOURCES.txt
proteus/csrc/: mlx_fn.cpp
proteus/custom_lowerings/: __init__.py  ast_lowering.py
proteus/custom_ops/: __init__.py  custom_ops.py
proteus/mlx_ast/: arg_marshalers.py  mlx_builder.py  mutable_args.py
proteus/mlx_ast/custom_lowerings/: ast_lowering.py
proteus/proteus.egg-info/: SOURCES.txt  requires.txt  top_level.txt
proteus/specializations/: hf_llm.py
proteus/utils/: compile_cache.py  utils.py
scratch/: bench_coercion.py  mlx-compile.py  mlx_slice.py  pt_mlx.ipynb  sdpa.ipynb  tensor_copy.cpp  torch-compile.py  torch-graphs.ipynb
src/: arg_marshalers.py  graph.txt  mlx_builder.py  proteus.py  proteus_fun.py  utils.py
src/custom_ops/: linear.py
tests/: automated_tests.py  mlx_mutation.py  test.py  test_coercion.py  test_cpp_ext.py  test_llama.py  test_mlx_fn_mappings.py  test_modules.py  test_scratchspace.py  test_sd.py
