[project]
name = "proteus"
version = "0.1.0"
description = "Accelerate PyTorch on MacOS, powered by MLX"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "mlx",
    "numpy",
]

[project.optional-dependencies]
test = [
    "transformers",
    "diffusers",
    "sentencepiece", 
    "protobuf",
]

[tool.setuptools]
packages = ["proteus", "c_extensions"]

[build-system]
requires = [
  "setuptools>=42",
  "cmake>=3.24",
  "mlx>=0.18.0",
  "nanobind",
]
build-backend = "setuptools.build_meta"